# NUCLEO-G474RE-timer-interrupt-for-embedded-rust

./: .gitignore  Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
src/: main.rs
