[package]
name = "NUCLEO-G474RE-blink-for-embedded-rust"
version = "0.2.0"
edition = "2024"
description = "Example project for blinking an LED on the NUCLEO-G474RE board using embedded Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Patricio-Andre/NUCLEO-G474RE-blink-for-embedded-rust" 
keywords = ["embedded", "stm32", "blink", "stm32g4", "stm32g474RE"]
categories = ["embedded", "hardware-support"]


[dependencies]
# Essential for bare-metal (reset handler, stack pointer)
cortex-m = "0.7"
cortex-m-rt = "0.7"

# Hardware abstraction for the G4 family
# IMPORTANT: pick the correct feature (e.g. stm32g474 or stm32g431)
stm32g4xx-hal = { version = "0.0.1", features = ["stm32g474", "rt"] }

# Simple panic strategy (halts the processor)
panic-halt = "1.0.0"

# Traits for hardware (digital::v2::OutputPin, etc)
embedded-hal = "1.0.0"
cfg-if = "1.0"

# Real Time Transfer - defmt Version
defmt = "1.0.1"
defmt-rtt = "1.1.0"

[features]
# Minimal feature set; logging-related feature flags removed.
default = []

